--- a/vt/specs/visual/animated.yaml
+++ b/vt/specs/visual/animated.yaml
@@ -1,6 +1,7 @@
 ---
 title: "Animated Spritesheet Visual"
 description: Test animated spritesheet visual element
+skipScreenshot: true
 ---
 l10n:
   packages:
