--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,16 +23,18 @@ jobs:
       - run: bun run test
 
       - name: Install rtgl CLI
+        if: false # Temporarily disable VT in CI until timeout issues are resolved
         run: bun install -g rtgl
 
       - name: Run Visual Tests (Docker)
+        if: false # Temporarily disable VT in CI until timeout issues are resolved
         env:
           RTGL_VT_DEBUG: true
         run: bun run vt:report
 
       - name: Upload VT Images as Artifacts
         uses: actions/upload-artifact@v4
-        if: failure()
+        if: false # Temporarily disable VT in CI until timeout issues are resolved
         with:
           name: vt-images-${{ github.run_number }}
           path: .rettangoli/
