--- a/vt/specs/dialogue/autoplay.yaml
+++ b/vt/specs/dialogue/autoplay.yaml
@@ -50,7 +50,7 @@ resources:
           y: 800
           width: 1720
           height: 200
-          fill: "#333333"
+          fill: "#4D4D4D"
 
         - id: dialogue-text
           type: text
@@ -69,7 +69,7 @@ resources:
           textStyle:
             fontSize: 32
             $if autoMode:
-              fill: "#00ff00"
+              fill: "#D9D9D9"
             $else:
               fill: "white"
           hover:
@@ -89,7 +89,7 @@ resources:
           textStyle:
             fontSize: 32
             $if skipMode:
-              fill: "#00ff00"
+              fill: "#D9D9D9"
             $else:
               fill: "white"
           hover:
