--- a/vt/specs/dialogue/sceneMode.yaml
+++ b/vt/specs/dialogue/sceneMode.yaml
@@ -52,7 +52,7 @@ resources:
           y: 800
           width: 1720
           height: 200
-          fill: "#333333"
+          fill: "#4D4D4D"
 
         - id: dialogue-text
           type: text
@@ -115,7 +115,7 @@ resources:
           textStyle:
             fontSize: 32
             $if skipMode:
-              fill: "#00ff00"
+              fill: "#D9D9D9"
             $else:
               fill: "white"
           hover:
