--- a/vt/specs/save/basic.yaml
+++ b/vt/specs/save/basic.yaml
@@ -54,7 +54,7 @@ resources:
           y: 800
           width: 1720
           height: 200
-          fill: "#333333"
+          fill: "#4D4D4D"
 
         - id: dialogue-text
           type: text
@@ -71,9 +71,9 @@ resources:
           y: 20
           width: 100
           height: 50
-          fill: "#4CAF50"
+          fill: "#737373"
           hover:
-            fill: "#66BB6A"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -96,9 +96,9 @@ resources:
           y: 20
           width: 100
           height: 50
-          fill: "#2196F3"
+          fill: "#737373"
           hover:
-            fill: "#42A5F5"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -127,7 +127,7 @@ resources:
 
         - id: save-menu-bg
           type: rect
-          fill: "#1a1a2e"
+          fill: "#000000"
           width: 800
           height: 500
           x: 560
@@ -140,17 +140,17 @@ resources:
           y: 340
           textStyle:
             fontSize: 48
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: close-btn
           type: rect
-          fill: "#F44336"
+          fill: "#737373"
           width: 50
           height: 50
           x: 1290
           y: 300
           hover:
-            fill: "#EF5350"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -163,17 +163,17 @@ resources:
           y: 310
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: save-slot-1-btn
           type: rect
-          fill: "#4CAF50"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 400
           hover:
-            fill: "#66BB6A"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -187,17 +187,17 @@ resources:
           y: 420
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: save-slot-2-btn
           type: rect
-          fill: "#2196F3"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 490
           hover:
-            fill: "#42A5F5"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -211,17 +211,17 @@ resources:
           y: 510
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: save-slot-3-btn
           type: rect
-          fill: "#FF9800"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 580
           hover:
-            fill: "#FFB74D"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -235,7 +235,7 @@ resources:
           y: 600
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: save-menu-info
           type: text
@@ -244,7 +244,7 @@ resources:
           y: 730
           textStyle:
             fontSize: 20
-            fill: "#aaaaaa"
+            fill: "#A6A6A6"
 
     loadMenuLayout:
       elements:
@@ -258,7 +258,7 @@ resources:
 
         - id: load-menu-bg
           type: rect
-          fill: "#1a1a2e"
+          fill: "#000000"
           width: 800
           height: 500
           x: 560
@@ -271,17 +271,17 @@ resources:
           y: 340
           textStyle:
             fontSize: 48
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: load-close-btn
           type: rect
-          fill: "#F44336"
+          fill: "#737373"
           width: 50
           height: 50
           x: 1290
           y: 300
           hover:
-            fill: "#EF5350"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -294,17 +294,17 @@ resources:
           y: 310
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: load-slot-1-btn
           type: rect
-          fill: "#9C27B0"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 400
           hover:
-            fill: "#AB47BC"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -318,17 +318,17 @@ resources:
           y: 420
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: load-slot-2-btn
           type: rect
-          fill: "#E91E63"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 490
           hover:
-            fill: "#EC407A"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -342,17 +342,17 @@ resources:
           y: 510
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: load-slot-3-btn
           type: rect
-          fill: "#673AB7"
+          fill: "#737373"
           width: 600
           height: 70
           x: 660
           y: 580
           hover:
-            fill: "#7E57C2"
+            fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
@@ -366,7 +366,7 @@ resources:
           y: 600
           textStyle:
             fontSize: 32
-            fill: "#ffffff"
+            fill: "#FFFFFF"
 
         - id: load-menu-info
           type: text
@@ -375,7 +375,7 @@ resources:
           y: 730
           textStyle:
             fontSize: 20
-            fill: "#aaaaaa"
+            fill: "#A6A6A6"
 
 story:
   initialSceneId: test_scene
