--- a/vt/specs/save/multi-slot-test.yaml
+++ b/vt/specs/save/multi-slot-test.yaml
@@ -11,7 +11,7 @@ l10n:
 screen:
   width: 1920
   height: 1080
-  backgroundColor: "#1a1a2e"
+  backgroundColor: "#000000"
 
 resources:
   variables:
@@ -61,7 +61,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 42
-            fill: "#ffffff"
+            fill: "#FFFFFF"
             fontWeight: bold
 
         - id: subtitle
@@ -72,7 +72,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 24
-            fill: "#95a5a6"
+            fill: "#A6A6A6"
 
         # Current State Display
         - id: currentStateLabel
@@ -83,7 +83,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 28
-            fill: "#3498db"
+            fill: "#737373"
             fontWeight: bold
 
         - id: nameDisplay
@@ -93,7 +93,7 @@ resources:
           y: 240
           textStyle:
             fontSize: 26
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         - id: levelDisplay
           type: text
@@ -102,7 +102,7 @@ resources:
           y: 240
           textStyle:
             fontSize: 26
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         - id: goldDisplay
           type: text
@@ -111,7 +111,7 @@ resources:
           y: 240
           textStyle:
             fontSize: 26
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         - id: questDisplay
           type: text
@@ -120,7 +120,7 @@ resources:
           y: 240
           textStyle:
             fontSize: 26
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         # Modify Current State Section
         - id: modifyLabel
@@ -131,7 +131,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 28
-            fill: "#e74c3c"
+            fill: "#737373"
             fontWeight: bold
 
         # Name buttons
@@ -147,7 +147,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 22
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: btnAlice
               type: text
@@ -156,11 +156,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -178,11 +178,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -200,11 +200,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -228,7 +228,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 22
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: btnLevelUp
               type: text
@@ -237,11 +237,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#2ecc71"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#27ae60"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -258,11 +258,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#e74c3c"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#c0392b"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -285,7 +285,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 22
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: btnGoldAdd
               type: text
@@ -294,11 +294,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#f39c12"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#f1c40f"
+                  fill: "#A6A6A6"
               click:
                 actionPayload:
                   actions:
@@ -316,11 +316,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#7f8c8d"
+                  fill: "#A6A6A6"
               click:
                 actionPayload:
                   actions:
@@ -344,7 +344,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 22
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: btnQuestToggle
               type: text
@@ -353,11 +353,11 @@ resources:
               y: 0
               textStyle:
                 fontSize: 20
-                fill: "#9b59b6"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#8e44ad"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -376,7 +376,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 28
-            fill: "#2ecc71"
+            fill: "#737373"
             fontWeight: bold
 
         - id: saveSlotButtons
@@ -393,12 +393,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#2ecc71"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -413,12 +413,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#2ecc71"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -433,12 +433,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#2ecc71"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -453,12 +453,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#2ecc71"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -474,7 +474,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 28
-            fill: "#3498db"
+            fill: "#737373"
             fontWeight: bold
 
         - id: loadSlotButtons
@@ -491,12 +491,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#3498db"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -511,12 +511,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#3498db"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -531,12 +531,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#3498db"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -551,12 +551,12 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
                 fontWeight: bold
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#3498db"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -572,7 +572,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 20
-            fill: "#7f8c8d"
+            fill: "#A6A6A6"
             align: center
 
         - id: devToolsHint
@@ -583,7 +583,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 18
-            fill: "#34495e"
+            fill: "#4D4D4D"
             align: center
 
 story:
