--- a/vt/specs/variables/rollback-test.yaml
+++ b/vt/specs/variables/rollback-test.yaml
@@ -12,7 +12,7 @@ l10n:
 screen:
   width: 1920
   height: 1080
-  backgroundColor: "#1a1a2e"
+  backgroundColor: "#000000"
 
 resources:
   variables:
@@ -30,7 +30,7 @@ resources:
       elements:
         - id: bg
           type: rect
-          fill: "#1a1a2e"
+          fill: "#000000"
           width: 1920
           height: 1080
           click:
@@ -49,7 +49,7 @@ resources:
           y: 750
           width: 1720
           height: 280
-          fill: "#2c3e50"
+          fill: "#4D4D4D"
           opacity: 0.9
           click:
             actionPayload:
@@ -64,7 +64,7 @@ resources:
           y: 770
           textStyle:
             fontSize: 28
-            fill: "#3498db"
+            fill: "#737373"
             fontWeight: bold
 
         # Dialogue text
@@ -76,7 +76,7 @@ resources:
           width: 1620
           textStyle:
             fontSize: 24
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         # Score display
         - id: scoreDisplay
@@ -87,7 +87,7 @@ resources:
           anchorX: 1
           textStyle:
             fontSize: 32
-            fill: "#f1c40f"
+            fill: "#A6A6A6"
             fontWeight: bold
 
         # Back button - positioned above dialogue box
@@ -98,11 +98,11 @@ resources:
           y: 700
           textStyle:
             fontSize: 28
-            fill: "#e74c3c"
+            fill: "#737373"
           hover:
             textStyle:
               fontSize: 28
-              fill: "#ff6b6b"
+              fill: "#A6A6A6"
           click:
             actionPayload:
               actions:
