--- a/vt/specs/variables/scope-comparison.yaml
+++ b/vt/specs/variables/scope-comparison.yaml
@@ -12,7 +12,7 @@ l10n:
 screen:
   width: 1920
   height: 1080
-  backgroundColor: "#1a1a2e"
+  backgroundColor: "#000000"
 
 resources:
   variables:
@@ -73,7 +73,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 42
-            fill: "#e8e8e8"
+            fill: "#D9D9D9"
             fontWeight: bold
 
         # ═══════════════════════════════════════════════════════
@@ -91,7 +91,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 32
-                fill: "#3498db"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: contextDesc
@@ -101,7 +101,7 @@ resources:
               y: 40
               textStyle:
                 fontSize: 18
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
 
             - id: contextDesc2
               type: text
@@ -110,7 +110,7 @@ resources:
               y: 70
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             - id: contextDesc3
               type: text
@@ -119,7 +119,7 @@ resources:
               y: 95
               textStyle:
                 fontSize: 18
-                fill: "#e74c3c"
+                fill: "#737373"
 
             # Gold counter
             - id: goldLabel
@@ -129,7 +129,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: goldValue
               type: text
@@ -138,7 +138,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#f39c12"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: goldPlus
@@ -148,11 +148,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#2ecc71"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#27ae60"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -170,11 +170,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#e74c3c"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#c0392b"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -193,7 +193,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: locationValue
               type: text
@@ -202,7 +202,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#9b59b6"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: locationTown
@@ -212,11 +212,11 @@ resources:
               y: 200
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -234,11 +234,11 @@ resources:
               y: 200
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -264,7 +264,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 32
-                fill: "#e67e22"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: global-deviceDesc
@@ -274,7 +274,7 @@ resources:
               y: 40
               textStyle:
                 fontSize: 18
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
 
             - id: global-deviceDesc2
               type: text
@@ -283,7 +283,7 @@ resources:
               y: 70
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             - id: global-deviceDesc3
               type: text
@@ -292,7 +292,7 @@ resources:
               y: 95
               textStyle:
                 fontSize: 18
-                fill: "#e74c3c"
+                fill: "#737373"
 
             # Text Speed
             - id: speedLabel
@@ -302,7 +302,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: speedValue
               type: text
@@ -311,7 +311,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#e67e22"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: speedSlow
@@ -321,11 +321,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -343,11 +343,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -365,11 +365,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -388,7 +388,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: volumeValue
               type: text
@@ -397,7 +397,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#e67e22"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: volumeUp
@@ -407,11 +407,11 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#2ecc71"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#27ae60"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -429,11 +429,11 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#e74c3c"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#c0392b"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -459,7 +459,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 32
-                fill: "#9b59b6"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: global-accountDesc
@@ -469,7 +469,7 @@ resources:
               y: 40
               textStyle:
                 fontSize: 18
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
 
             - id: global-accountDesc2
               type: text
@@ -478,7 +478,7 @@ resources:
               y: 70
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             - id: global-accountDesc3
               type: text
@@ -487,7 +487,7 @@ resources:
               y: 95
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             # Playthroughs counter
             - id: playthroughsLabel
@@ -497,7 +497,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: playthroughsValue
               type: text
@@ -506,7 +506,7 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#9b59b6"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: playthroughsInc
@@ -516,11 +516,11 @@ resources:
               y: 150
               textStyle:
                 fontSize: 24
-                fill: "#2ecc71"
+                fill: "#737373"
               hover:
                 textStyle:
                   fontSize: 24
-                  fill: "#27ae60"
+                  fill: "#4D4D4D"
               click:
                 actionPayload:
                   actions:
@@ -538,7 +538,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#ffffff"
+                fill: "#FFFFFF"
 
             - id: secretValue
               type: text
@@ -547,7 +547,7 @@ resources:
               y: 200
               textStyle:
                 fontSize: 24
-                fill: "#9b59b6"
+                fill: "#737373"
                 fontWeight: bold
 
             - id: secretToggle
@@ -557,11 +557,11 @@ resources:
               y: 200
               textStyle:
                 fontSize: 20
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 20
-                  fill: "#ffffff"
+                  fill: "#FFFFFF"
               click:
                 actionPayload:
                   actions:
@@ -587,7 +587,7 @@ resources:
               y: 0
               textStyle:
                 fontSize: 28
-                fill: "#ecf0f1"
+                fill: "#D9D9D9"
                 fontWeight: bold
 
             # Table headers
@@ -598,7 +598,7 @@ resources:
               y: 60
               textStyle:
                 fontSize: 20
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: headerSaved
               type: text
@@ -607,7 +607,7 @@ resources:
               y: 60
               textStyle:
                 fontSize: 20
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             - id: headerPersist
               type: text
@@ -616,7 +616,7 @@ resources:
               y: 60
               textStyle:
                 fontSize: 20
-                fill: "#bdc3c7"
+                fill: "#A6A6A6"
 
             # Runtime row
             - id: contextRow
@@ -626,7 +626,7 @@ resources:
               y: 100
               textStyle:
                 fontSize: 18
-                fill: "#3498db"
+                fill: "#737373"
 
             - id: contextSaved
               type: text
@@ -635,7 +635,7 @@ resources:
               y: 100
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             - id: contextPersist
               type: text
@@ -644,7 +644,7 @@ resources:
               y: 100
               textStyle:
                 fontSize: 18
-                fill: "#e74c3c"
+                fill: "#737373"
 
             # Device row
             - id: global-deviceRow
@@ -654,7 +654,7 @@ resources:
               y: 140
               textStyle:
                 fontSize: 18
-                fill: "#e67e22"
+                fill: "#737373"
 
             - id: global-deviceSaved
               type: text
@@ -663,7 +663,7 @@ resources:
               y: 140
               textStyle:
                 fontSize: 18
-                fill: "#e74c3c"
+                fill: "#737373"
 
             - id: global-devicePersist
               type: text
@@ -672,7 +672,7 @@ resources:
               y: 140
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             # Global row
             - id: global-accountRow
@@ -682,7 +682,7 @@ resources:
               y: 180
               textStyle:
                 fontSize: 18
-                fill: "#9b59b6"
+                fill: "#737373"
 
             - id: global-accountSaved
               type: text
@@ -691,7 +691,7 @@ resources:
               y: 180
               textStyle:
                 fontSize: 18
-                fill: "#e67e22"
+                fill: "#737373"
 
             - id: global-accountPersist
               type: text
@@ -700,7 +700,7 @@ resources:
               y: 180
               textStyle:
                 fontSize: 18
-                fill: "#2ecc71"
+                fill: "#737373"
 
             - id: global-accountNote
               type: text
@@ -709,7 +709,7 @@ resources:
               y: 215
               textStyle:
                 fontSize: 14
-                fill: "#7f8c8d"
+                fill: "#A6A6A6"
 
             # Use Cases
             - id: useCasesTitle
@@ -719,7 +719,7 @@ resources:
               y: 280
               textStyle:
                 fontSize: 24
-                fill: "#ecf0f1"
+                fill: "#D9D9D9"
                 fontWeight: bold
 
             - id: useRuntime
@@ -729,7 +729,7 @@ resources:
               y: 330
               textStyle:
                 fontSize: 16
-                fill: "#3498db"
+                fill: "#737373"
 
             - id: useDevice
               type: text
@@ -738,7 +738,7 @@ resources:
               y: 360
               textStyle:
                 fontSize: 16
-                fill: "#e67e22"
+                fill: "#737373"
 
             - id: useGlobal
               type: text
@@ -747,7 +747,7 @@ resources:
               y: 390
               textStyle:
                 fontSize: 16
-                fill: "#9b59b6"
+                fill: "#737373"
 
             # Lifecycle diagram
             - id: lifecycleTitle
@@ -757,7 +757,7 @@ resources:
               y: 460
               textStyle:
                 fontSize: 24
-                fill: "#ecf0f1"
+                fill: "#D9D9D9"
                 fontWeight: bold
 
             - id: lifecycleRuntime
@@ -767,7 +767,7 @@ resources:
               y: 510
               textStyle:
                 fontSize: 16
-                fill: "#3498db"
+                fill: "#737373"
 
             - id: lifecycleDevice
               type: text
@@ -776,7 +776,7 @@ resources:
               y: 540
               textStyle:
                 fontSize: 16
-                fill: "#e67e22"
+                fill: "#737373"
 
             - id: lifecycleGlobal
               type: text
@@ -785,7 +785,7 @@ resources:
               y: 570
               textStyle:
                 fontSize: 16
-                fill: "#9b59b6"
+                fill: "#737373"
 
 story:
   initialSceneId: main
