--- a/vt/specs/variables/string-test.yaml
+++ b/vt/specs/variables/string-test.yaml
@@ -11,7 +11,7 @@ l10n:
 screen:
   width: 1920
   height: 1080
-  backgroundColor: "#2c3e50"
+  backgroundColor: "#4D4D4D"
 
 resources:
   variables:
@@ -49,7 +49,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 48
-            fill: "#ecf0f1"
+            fill: "#D9D9D9"
 
         # Display context string (playerName)
         - id: nameLabel
@@ -59,7 +59,7 @@ resources:
           y: 300
           textStyle:
             fontSize: 32
-            fill: "#bdc3c7"
+            fill: "#A6A6A6"
 
         - id: nameValue
           type: text
@@ -68,7 +68,7 @@ resources:
           y: 300
           textStyle:
             fontSize: 32
-            fill: "#3498db"
+            fill: "#737373"
             fontWeight: bold
 
         # Display global-account string (currentStatus)
@@ -79,7 +79,7 @@ resources:
           y: 400
           textStyle:
             fontSize: 32
-            fill: "#bdc3c7"
+            fill: "#A6A6A6"
 
         - id: statusValue
           type: text
@@ -88,7 +88,7 @@ resources:
           y: 400
           textStyle:
             fontSize: 32
-            fill: "#e74c3c"
+            fill: "#737373"
             fontWeight: bold
 
         # Name change buttons
@@ -106,11 +106,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -129,11 +129,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -152,11 +152,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#f39c12"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -175,11 +175,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#95a5a6"
+                fill: "#A6A6A6"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#e74c3c"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -205,11 +205,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#1abc9c"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -228,11 +228,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#1abc9c"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -251,11 +251,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#1abc9c"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -274,11 +274,11 @@ resources:
               anchorX: 0.5
               textStyle:
                 fontSize: 28
-                fill: "#ffffff"
+                fill: "#FFFFFF"
               hover:
                 textStyle:
                   fontSize: 28
-                  fill: "#1abc9c"
+                  fill: "#737373"
               click:
                 actionPayload:
                   actions:
@@ -298,7 +298,7 @@ resources:
           anchorX: 0.5
           textStyle:
             fontSize: 24
-            fill: "#7f8c8d"
+            fill: "#A6A6A6"
 
 story:
   initialSceneId: main
