--- a/vt/specs/character/animation-1.yaml
+++ b/vt/specs/character/animation-1.yaml
@@ -32,11 +32,11 @@ resources:
       width: 1920
       height: 1080
     fk4jla893:
-      fileId: la3lka
+      fileId: char_sprite_1
       width: 200
       height: 200
     3fjaklj34:
-      fileId: x342fga
+      fileId: char_sprite_2
       width: 200
       height: 200
 
@@ -46,9 +46,9 @@ resources:
         name: "Abc"
       sprites:
         fk4jla893:
-          fileId: la3lka
+          fileId: char_sprite_1
         3fjaklj34:
-          fileId: x342fga
+          fileId: char_sprite_2
 
   transforms:
     iasdlf:
