--- a/vt/specs/character/animation-1.yaml
+++ b/vt/specs/character/animation-1.yaml
@@ -32,13 +32,13 @@ resources:
       width: 1920
       height: 1080
     fk4jla893:
-      fileId: la3lka
-      width: 200
-      height: 200
+      fileId: char_sprite_1
+      width: 553
+      height: 865
     3fjaklj34:
-      fileId: x342fga
-      width: 200
-      height: 200
+      fileId: char_sprite_2
+      width: 553
+      height: 865
 
   characters:
     alkjf3ia:
@@ -46,20 +46,26 @@ resources:
         name: "Abc"
       sprites:
         fk4jla893:
-          fileId: la3lka
+          fileId: char_sprite_1
         3fjaklj34:
-          fileId: x342fga
+          fileId: char_sprite_2
 
   transforms:
     iasdlf:
-      x: 100
-      y: 300
+      x: 480
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     a32kf3:
-      x: 500
-      y: 300
+      x: 1440
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
     t_center:
       x: 960
-      y: 540
+      y: 1080
+      anchorX: 0.5
+      anchorY: 1
 
   tweens:
     slide_in:
