Slider drag updates variable

--- a/rettangoli.config.yaml
+++ b/rettangoli.config.yaml
@@ -45,3 +45,5 @@ vt:
           files: "variables"
         - title: "initialization"
           files: "initialization"
+        - title: "Slider"
+          files: "slider"
